; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_animate_cursor.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_animate_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cursor_pos = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @animate_cursor(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 196
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = mul nsw i32 %7, 16
  %9 = call i32 @fmin(i32 255, i32 %8)
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = mul nsw i32 %11, 2
  %13 = sub nsw i32 255, %12
  br label %14

14:                                               ; preds = %10, %6
  %15 = phi i32 [ %9, %6 ], [ %13, %10 ]
  store i32 %15, i32* %3, align 4
  %16 = call i32 (...) @rgblight_get_hue()
  %17 = call i32 (...) @rgblight_get_sat()
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @cursor_pos, align 4
  %20 = call i32 @rgblight_sethsv_at(i32 %16, i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @fmin(i32, i32) #1

declare dso_local i32 @rgblight_sethsv_at(i32, i32, i32, i32) #1

declare dso_local i32 @rgblight_get_hue(...) #1

declare dso_local i32 @rgblight_get_sat(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
